<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Dottys</string>
    <string name="splash_first_text">Our Player Perks App was designed to\nenhance your experience while visiting any of\nour more than 40 locations.</string>
    <string name="splash_second_text">Get rewarded for playing at Dotty’s, earning\npoints that you can redeem them\nfor drawing entries or cash.</string>
    <string name="title_second_top_splas">The more you play,\nthe more you earn.</string>
    <string name="title_third_splash_item">Redeem points the way you\nwant.</string>
    <string name="subtitle_third_splash_item">Points can be redeemed for incentives and\nother rewards, either through\nthe app or on premise.</string>
    <string name="title_four_splash_item">Are you ready?\nLet’s Go!</string>
    <string name="subtitle_four_splash_item">Receive notifications for contests, special\nevents, promotions and other incentives only\navailable through the Dotty’s app.</string>
<!--PRODUCCION-->
    <string name="url_base_production">https://api.playspinwinbrands.com/api/</string>
<!--    DEVELOPMENT-->
<!--    <string name="url_base_production">https://dev.api.playspinwinbrands.com/api/</string>-->

    <string name="title_activity_dottys_main">DottysMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_rewards">Rewards</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_and_conditions">Terms and Conditions</string>
    <string name="menu_replay_tutorial">Replay Tutorial</string>
    <string name="menu_contact_support">Contact Support</string>
    <string name="menu_app_support">App Support</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_redeem_rewards">Logout</string>


    <string name="menu_convert_points">Convert Points</string>
    <!--    <string name="menu_privacy_policy">Share</string>-->
    <string name="menu_profile">Profile</string>
    <string name="title_activity_dottys_main_navigation">DottysMainNavigationActivity</string>
    <string name="default_wired_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sit amet viverra tellus. Vivamus dictum, magna laoreet congue rhoncus, tellus nibh cursus nunc, vel cursus nisl elit vitae libero. Phasellus et nunc in augue facilisis condimentum. Ut quis ipsum lorem. Cras eu mauris ligula.

Suspendisse potenti. Donec nibh eros, pellentesque pretium nisi et, mattis consequat sem. Donec et diam nec nibh volutpat bibendum. Aenean ut risus eget lectus suscipit convallis quis vitae ex. Pellentesque eu urna nec risus pellentesque ullamcorper.

Sed commodo tellus sit amet nisi scelerisque volutpat. Nam ac sapien ac felis vehicula pulvinar vulputate fermentum nibh. Phasellus venenatis ante at lobortis ullamcorper. Praesent eu tellus id enim tempor mollis id sit amet libero. Nunc maximus velit elit, id volutpat mauris finibus facilisis.</string>
    <string name="backspace_pad"><![CDATA[<]]></string>
    <!--GEOFENCING-->


    <!-- Buttons strings -->
    <string name="enter_geofences">Enter geofences</string>
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="geofences_not_added">Geofences not added</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <!--    GEOFENCES 2-->
    <string name="title_activity_hunt">Treasure Hunt</string>

    <!--    Permissions Strings-->

    <string name="location_setting_off">Please turn on device location in Settings and try again.
    </string>

    <!--    Geofence Status Strings-->

    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>

    <!-- Geofence Hints -->
    <string name="not_started_hint"></string>
    <string name="golden_gate_bridge_hint">Go to a bridge with a name that does not match the color that it is!</string>
    <string name="ferry_building_hint">Go to a market with an amazing assortment of delicious foods. It is a San Francisco classic!</string>
    <string name="pier_39_hint">Go to a pier popular for tourist attractions, carnival games, fresh fish, and delicious sourdough bread!</string>
    <string name="union_square_hint">Go to a square named after Civil War rallies held there, but now known for its amazing shopping!</string>

    <!-- Geofence Locations -->
    <string name="golden_gate_bridge_location">at the Golden Gate bridge</string>
    <string name="ferry_building_location">in the Ferry Building</string>
    <string name="pier_39_location">at Pier 39</string>
    <string name="union_square_location">in Union Square</string>

    <!-- Error strings -->

    <string name="location_required_error">Location services must be enabled for this game.</string>

    <string name="geofences_not_removed">Geofences not removed.</string>

    <string name="geofence_error">There was an error in finding your treasure</string>

    <!-- Notification Strings-->
    <string name="channel_name">GeofenceStatus</string>
    <string name="content_text">You found a clue <xliff:g id="geofence_location">%1$s</xliff:g>.</string>
    <string name="notification_channel_description">Geofence status notification</string>

    <!-- Content Description Strings -->
    <string name="android_map_description">An Android robot with a map</string>
    <string name="password_policy_check_message">The password must be at least 6 characters long and contain 1 uppercase letter and 1 lowercase letter</string>
    <string name="legal_age_message">You must be 21 years old to participate.</string>
    <string name="terms_and_conditions_messages">You must agree to the Terms &amp; Conditions and Privacy Policy to proceed</string>
    <string name="complete_all_fields">All field must be complete!</string>
    <string name="LOCATION_PERMISISONS">"Dotty’s requires access to your device location in the background in order to recognize the device’s entry into secured Dotty’s store locations.\nTo enable location permissions in the background:\n1. Tap on “Continue” on this dialog box.\n2. Tap on “Allow in settings” in the next prompt. This will open the location permission screen for Dotty’s.\n3. Select “Allow all the time” on the screen."</string>

</resources>
