<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard"

    >
    <fragment
        android:id="@+id/nav_locations"
        android:name="com.playspinwin.dottys.ui.locations.LocationsFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_locations" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.playspinwin.dottys.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />



<!--    <fragment-->
<!--        android:id="@+id/nav_rewards"-->
<!--        android:name="com.keylimetie.dottys.ui.rewards.RewardsFragment"-->
<!--        android:label="@string/nav_rewards"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->
<!--    <fragment-->
<!--        android:id="@+id/nav_rewards"-->
<!--        android:name="com.keylimetie.dottys.ui.drawing.DrawingFragment"-->
<!--        android:label="@string/menu_rewards"-->
<!--        tools:layout="@layout/fragment_drawing" />-->

    <activity
        android:id="@+id/nav_rewards"
        android:name="com.playspinwin.dottys.redeem.DottysRedeemRewardsActivity"
        android:label="@string/menu_rewards"
        tools:layout="@layout/activity_dottys_redeem_rewards" />
    <fragment
        android:id="@+id/nav_drawing"
        android:name="com.playspinwin.dottys.ui.drawing.DrawingFragment"
        android:label="@string/menu_drawing"
        tools:layout="@layout/fragment_drawing" />

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.playspinwin.dottys.ui.reusable_fragment.ReusableFragment"
        android:label="@string/menu_privacy_policy"
        tools:layout="@layout/fragment_share"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.playspinwin.dottys.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/reusable_fragment" />

    <fragment
        android:id="@+id/nav_terms_and_conditions"
        android:name="com.playspinwin.dottys.ui.reusable_fragment.ReusableFragment"
        android:label="@string/menu_terms_and_conditions"
        tools:layout="@layout/reusable_fragment" />
<!--    <fragment-->
<!--            android:id="@+id/nav_replay_tutorial"-->
<!--        android:name="com.keylimetie.dottys.ui.reusable_fragment.ReusableFragment"-->
<!--        android:label="@string/menu_terms_and_conditions"-->
<!--        tools:layout="@layout/reusable_fragment" />-->
<!--    <include-->
<!--        app:graph = "@navigation/mobile_navigation"-->
<!--        android:id="@+id/nav_contact_suppport"-->
<!--        android:label="@string/menu_contact_support"-->
<!--        tools:layout="@layout/analitycs_view_layout" />-->
    <fragment

        android:id="@+id/nav_logout"
        android:name="com.playspinwin.dottys.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/logout_fragment" />
    <fragment
        android:id="@+id/nav_redeem_rewards"
        android:name="com.playspinwin.dottys.ui.redeem_rewards.DottysRedeemRewrds"
        android:label="@string/menu_redeem_rewards"
        tools:layout="@layout/dottys_redeem_rewrds_fragment" />

<!--    <include-->

<!--        android:id="@+id/nav_contact_suppport"-->
<!--         android:label="@string/menu_contact_support"-->
<!--        tools:layout="@layout/analitycs_view_layout"-->
<!--        app:graph="@navigation/mobile_navigation"-->
<!--         />-->



</navigation>